man_MANS =		\
	rastaadd.1	\
	rastadel.1	\
	gtkrasta.1	\
	clrasta.1	\
	cgirasta.1	\
	rastaedit.1

POD_FILES =			\
	rastaadd.pod		\
	rastadel.pod		\
	gtkrasta.pod		\
	clrasta.pod		\
	cgirasta.pod		\
	rastaedit.pod

MAN_INPUT =			\
	rastaadd.1.in		\
	rastadel.1.in		\
	gtkrasta.1.in		\
	clrasta.1.in		\
	cgirasta.1.in		\
	rastaedit.1.in

EXTRA_DIST =			\
	$(POD_FILES)		\
	$(MAN_INPUT)

MAINTAINERCLEANFILES = $(MAN_INPUT)
